# berlin-lst-downscaling

./: .dvcignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  noxfile.py  pyproject.toml
.dvc/: config
.opencode/: PROJECT_STATE.md
configs/: config.yaml
configs/ard/: _base.yaml  ard_process.yaml  ard_status.yaml  cloud_smoke_v3.yaml  default.yaml  ecostress.yaml  full.yaml  full_all.yaml  gee_export.yaml  landsat.yaml  sentinel2.yaml  smoke.yaml  smoke_primary.yaml
configs/ard/ecostress/: cloud.yaml  default.yaml  full.yaml  smoke.yaml
configs/ard/landsat/: default.yaml  full.yaml  smoke.yaml
configs/ard/sentinel2/: default.yaml  full.yaml  smoke.yaml
configs/callbacks/: default.yaml
configs/datamodule/: berlin.yaml
configs/dwd_validation/: _base.yaml  smoke.yaml
configs/dynamic/: _base.yaml  cloud_smoke.yaml  full.yaml  inference_2026.yaml  smoke.yaml
configs/experiment/: stage_1.yaml  stage_2.yaml  stage_3.yaml  stage_4.yaml  stage_5.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/module/: unet_2d.yaml
configs/module/network/: unet.yaml
configs/paths/: default.yaml
configs/secondary/: _base.yaml  fixture.yaml  full_all.yaml  imperviousness.yaml  smoke_all.yaml  smoke_imperviousness.yaml  smoke_vegetation_height.yaml  static_geometry.yaml  vegetation_height.yaml
configs/selection/: _base.yaml  default.yaml  full_2017_2025.yaml  full_2017_2026.yaml  smoke_2024_mai_sep.yaml  smoke_jul2024.yaml
configs/static_derived/: _base.yaml  full.yaml  smoke.yaml
configs/static_sources/: _base.yaml  full.yaml  smoke.yaml
configs/trainer/: default.yaml
data/: berlin_aoi.geojson  berlin_landesgrenze.geojson
data/ard/: manifest.parquet  scan_report.json  scan_report.md
data/boundaries/: README.md  aoi_100m.tif  aoi_10m.tif  berlin_landesgrenze_2km_buffer.geojson
docs/: additional-data-sources.md  ard-contracts.md  ard-manifest-schema.md  ard-pipeline.md  cloud-runbook.md  data-availability.md  data-sources-and-contracts.md  delivered-implementation.md  lod2-vintage-qualification.md  preprocessing-pipelines.md  run-logging.md  secondary-pipeline.md
notebooks/: data_availability.py  dwd_stations.py  ecostress_availability.py
reports/: coupling_analysis.md  coupling_pairs.csv
scripts/: ard_export.py  ard_list.py  ard_monitor.py  ard_process.py  ard_run.py  ard_smoke.py  ard_smoke_validation.py  ard_status.py  build_aoi.py  build_manifest.py  build_manifest_ecostress.py  coupling_analysis.py  diagnose_era5_memory.py  download_ecostress_fixture.py  fetch_berlin_boundary.py  publish_manifest.py  run_ard.py  run_ard_ecostress.py  run_ard_landsat.py  run_ard_sentinel2.py  run_dwd_validation.py  run_dynamic.py  run_dynamic_isolated.py  run_secondary.py  run_static_derived.py  run_static_sources.py  validate_ard.py  validate_dynamic.py  validate_manifest.py  visualize_smoke.py
scripts/spikes/: README.md  ard_spike.py  clear_frac_unit_check.py  era5_land_dynamic.py  secondary_geometry.py
src/: train.py
src/berlin_lst_downscaling/: __init__.py  config.py  pipeline.py
src/berlin_lst_downscaling/common/: __init__.py  config.py  grid.py  util.py
src/berlin_lst_downscaling/data/: __init__.py  appeears_client.py  ard_modes.py  ard_processor.py  ard_qa.py  boundary.py  ecostress_export.py  ecostress_scenes.py  gcs_client.py  gee_client.py  gee_export.py  (+6 more)
tests/: test_appeears_client.py  test_ard_modes.py  test_ard_pipeline.py  test_ard_processor.py  test_ard_qa.py  test_gee_scene_selection.py  test_grid_spec.py  test_pipeline.py  test_stac_writer.py
(+68 files in other folders)
