[project]
name = "berlin-lst-downscaling"
version = "0.2.0"
description = "Cloud-native LST downscaling skeleton (pre-implementation) — future data source: Planetary Computer STAC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[gs]>=3.67.1",
    "google-cloud-storage>=3.12.0",
    "pydantic-settings>=2.14.1",
    "wandb>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["ALL"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
