[project]
name = "berlin-lst-downscaling"
version = "0.2.0"
description = "Cloud-native LST downscaling skeleton (pre-implementation) — future data source: Planetary Computer STAC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[gs]>=3.67.1",
    "earthaccess>=0.10.0",
    "geopandas>=1.0.0",
    "google-cloud-storage>=3.12.0",
    "lightning>=2.6.5",
    "odc-stac>=0.4.0",
    "pillow>=11.0.0",
    "planetary-computer>=1.0.0",
    "pydantic-settings>=2.14.1",
    "pystac-client>=0.8.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.18.0",
    "wandb>=0.27.2",
    "zarr>=2.18,<3",
    # training stack (macOS x86_64 ceiling)
    "numpy<2",
    "torch<2.3",
    "torchgeo>=0.9.0",
    "hydra-core>=1.3.3",
    "pyarrow>=24.0.0",
    "blake3>=1.0.9",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["ALL"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
