[project]
name = "berlin-lst-downscaling"
version = "0.2.0"
description = "Cloud-native LST downscaling pipeline — Berlin case study"
requires-python = ">=3.12"
dependencies = [
    "dvc[gs]>=3.67.1",
    "earthaccess>=0.10.0",
    "geopandas>=1.0.0",
    "google-cloud-storage>=3.12.0",
    "lightning>=2.6.5",
    "odc-stac>=0.4.0",
    "pillow>=11.0.0",
    "planetary-computer>=1.0.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.18.0",
    "wandb>=0.27.2",
    "zarr>=2.18,<3",
    # training stack (macOS x86_64 ceiling — cloud Linux is unconstrained)
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchgeo>=0.9.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "hydra-core>=1.3.3",
    "pyarrow>=24.0.0",
    "scipy>=1.17.1",
    "tenacity>=8.0",
    "numba>=0.60,<0.61",
    "xarray-spatial>=0.10.16",
    # dynamic pipeline (ERA5-Land ingestion)
    "cdsapi>=0.7.7",
    "netcdf4>=1.7.3",
    # DWD station validation
    "wetterdienst>=0.128.0,<0.129",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
